--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
   "description": "",
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.8.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "socket.io-client": "^4.8.1",
     "vite": "^6.2.6"
   }
 }
