--- a/server/node/package.json
+++ b/server/node/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.8.1"
   }
 }
